# melsecai

./: .gitignore  CLAUDE.md  README.md  prd.md  pyproject.toml
config/: gxworks2_config.yaml
examples/: coin_car_wash.py  practice_11_comments.csv  practice_15.py  practice_17.py
melseccode/: code.txt  comments.csv
src/melsec_ladder_mcp/: __init__.py  errors.py  server.py
src/melsec_ladder_mcp/automation/: __init__.py  config.py  dialog_handlers.py  gxworks2_controller.py  gxworks2_uia.py  menu_paths.py
src/melsec_ladder_mcp/core/: __init__.py  compiler.py  devices.py  instructions.py  ladder.py
src/melsec_ladder_mcp/core/patterns/: __init__.py  base.py  flicker.py  full_reset.py  self_hold.py  sequential.py  timer_delay.py
src/melsec_ladder_mcp/formats/: csv_formatter.py  gxw_builder.py  gxworks2.py  template.gxw
src/melsec_ladder_mcp/models/: __init__.py  devices.py  export.py  instructions.py  ladder.py  rendering.py  timing.py
src/melsec_ladder_mcp/tools/: analyzer.py  exporter.py  generator.py  importer.py  renderer.py
tests/: conftest.py  test_application.py  test_car_wash.py  test_coin_car_wash.py  test_compiler.py  test_counter.py  test_csv_formatter.py  test_device_allocator.py  test_end_to_end.py  test_gxw_builder.py  test_gxworks2.py  test_importer.py  test_models.py  test_patterns.py  test_practice_17.py  test_tools.py  test_validator.py
tests/fixtures/: car_wash_expected_il.txt  car_wash_input.json  practice_11_expected_il.txt  practice_11_input.json
