[project]
name = "melsec-ladder-mcp"
version = "1.0.0"
description = "타이밍도 기반 MELSEC-Q 래더 프로그램 자동 생성 MCP 서버"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "olefile>=0.47",
    "pillow>=12.1.1",
    "pydantic>=2.6",
    "pywinauto>=0.6.8",
    "pyyaml>=6.0",
]

[project.scripts]
melsec-ladder-mcp = "melsec_ladder_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/melsec_ladder_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
